fix z-index

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -15,6 +15,7 @@
 }
 
 .md-version {
+    position: relative;
     z-index: 10;
 }
 
